--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ modules/mpv/dotfiles/mpv/mpvHistory.log
 modules/admin/
 modules/dms/dotfiles/DankMaterialShell/plugins/.repos/
 modules/dms/dotfiles/DankMaterialShell/plugins/.repos/
+mimeinfo.cache
+brave-*.desktop
