fix(niri): use oneshot service type and remove manual sleep for bootstrap

--- a/modules/niri/dotfiles/systemd/user/niri-bootstrap.service
+++ b/modules/niri/dotfiles/systemd/user/niri-bootstrap.service
@@ -8,7 +8,8 @@ ConditionEnvironment=NIRI_SOCKET
 ConditionEnvironment=XDG_CURRENT_DESKTOP=niri
 
 [Service]
-Type=simple
+Type=oneshot
+RemainAfterExit=yes
 TimeoutStartSec=60
 # Set environment variables if needed, though niri-bootstrap script handles defaults
 ExecStart=/usr/bin/bash -lc "%h/.local/bin/niri-bootstrap"
