Enable transmission module and add at dependency

--- a/hosts/hay.yaml
+++ b/hosts/hay.yaml
@@ -89,7 +89,7 @@ enabled_modules:
   # - obsidian
   - webcord
   - flatpak
-  # - transmission
+  - transmission
   # - elektron
   # - nemo
   # - program
