Fix ollama models path in environment.d

--- a/modules/ai/dotfiles/environment.d/30-ollama.conf
+++ b/modules/ai/dotfiles/environment.d/30-ollama.conf
@@ -1,5 +1,5 @@
 OLLAMA_ORIGINS=*
 OLLAMA_DEBUG=0
 OLLAMA_HOST=127.0.0.1:11434
-OLLAMA_MODELS=%h/.ollama/models
+OLLAMA_MODELS=${HOME}/.ollama/models
 CUDA_VISIBLE_DEVICES=0
