--- a/modules/search/dotfiles/danksearch/config.toml
+++ b/modules/search/dotfiles/danksearch/config.toml
@@ -22,6 +22,6 @@ exclude_hidden = false
 exclude_dirs = [
   "Downloads",
   ".kenp",
-  ".cache", ".direnv", ".nix-defexpr", ".git", ".venv", "venv",
+  ".cache", ".git", ".venv", "venv",
   "node_modules", "dist", "build", "target", "__pycache__",
 ]
