--- a/modules/hyprland/dotfiles/hypr/hyprland.conf
+++ b/modules/hyprland/dotfiles/hypr/hyprland.conf
@@ -911,7 +911,7 @@ bind=$mainMod SHIFT, C, exec, hyprpicker -a
 bind=$mainMod CTRL, V, exec, kitty --class clipse -e clipse
 bind=, F10, exec, /home/kenan/.local/bin/bluetooth_toggle
 bind=ALT, F12, exec, osc-mullvad toggle
-bind=$mainMod ALT, F12, exec,osc-mullvad slot recycle
+bind=$mainMod ALT, F12, exec,osc-mullvad-slot
 bind=, Print, exec, /home/kenan/.local/bin/screenshot ri
 bind=CTRL, Print, exec, /home/kenan/.local/bin/screenshot si
 bind=ALT, Print, exec, /home/kenan/.local/bin/screenshot wi
