--- a/modules/hyprland/dotfiles/hypr/hyprland.conf
+++ b/modules/hyprland/dotfiles/hypr/hyprland.conf
@@ -847,7 +847,7 @@ bind=$mainMod SHIFT, k, layoutmsg, movewindowto u
 bind=$mainMod SHIFT, j, layoutmsg, movewindowto d
 bind=$mainMod, Q, killactive
 bind=$mainMod, F, fullscreen, 0
-bind=$mainMod, M, exec, /home/kenan/.local/bin/hypr-set maximize-column
+bind=$mainMod, M, exec, ~/.local/bin/hypr-set maximize-column
 bind=$mainMod, C, layoutmsg, togglefit
 bind=$mainMod, R, layoutmsg, colresize +conf
 bind=$mainMod SHIFT, R, layoutmsg, colresize 0.8
@@ -858,20 +858,20 @@ bind=$mainMod, minus, layoutmsg, colresize -0.05
 bind=$mainMod, equal, layoutmsg, colresize +0.05
 bind=$mainMod SHIFT, minus, resizeactive, 0 -50
 bind=$mainMod SHIFT, equal, resizeactive, 0 50
-bind=ALT, G, exec, /home/kenan/.local/bin/hypr-set maximize-window-to-edges
+bind=ALT, G, exec, ~/.local/bin/hypr-set maximize-window-to-edges
 bind=$mainMod CTRL, W, togglegroup
-bind=$mainMod, G, exec, /home/kenan/.local/bin/hypr-set toggle-float
-bind=$mainMod CTRL, BackSpace, exec, /home/kenan/.local/bin/hypr-set focus-float-tile
-bind=$mainMod, Z, exec, /home/kenan/.local/bin/hypr-set zen
-bind=$mainMod, P, exec, /home/kenan/.local/bin/hypr-set pin
+bind=$mainMod, G, exec, ~/.local/bin/hypr-set toggle-float
+bind=$mainMod CTRL, BackSpace, exec, ~/.local/bin/hypr-set focus-float-tile
+bind=$mainMod, Z, exec, ~/.local/bin/hypr-set zen
+bind=$mainMod, P, exec, ~/.local/bin/hypr-set pin
 #bind=$mainMod ALT, O, hyprexpo:expo, toggle
-bind=$mainMod CTRL, left, exec, /home/kenan/.local/bin/hypr-set consume-or-expel left
-bind=$mainMod CTRL, right, exec, /home/kenan/.local/bin/hypr-set consume-or-expel right
-bind=$mainMod CTRL, h, exec, /home/kenan/.local/bin/hypr-set consume-or-expel left
-bind=$mainMod CTRL, l, exec, /home/kenan/.local/bin/hypr-set consume-or-expel right
-bind=$mainMod, O, exec, /home/kenan/.local/bin/hypr-set opacity toggle
-bind=$mainMod SHIFT, mouse_down, exec, /home/kenan/.local/bin/hypr-set opacity -0.1
-bind=$mainMod SHIFT, mouse_up, exec, /home/kenan/.local/bin/hypr-set opacity +0.1
+bind=$mainMod CTRL, left, exec, ~/.local/bin/hypr-set consume-or-expel left
+bind=$mainMod CTRL, right, exec, ~/.local/bin/hypr-set consume-or-expel right
+bind=$mainMod CTRL, h, exec, ~/.local/bin/hypr-set consume-or-expel left
+bind=$mainMod CTRL, l, exec, ~/.local/bin/hypr-set consume-or-expel right
+bind=$mainMod, O, exec, ~/.local/bin/hypr-set opacity toggle
+bind=$mainMod SHIFT, mouse_down, exec, ~/.local/bin/hypr-set opacity -0.1
+bind=$mainMod SHIFT, mouse_up, exec, ~/.local/bin/hypr-set opacity +0.1
 bind=$mainMod, Space, exec, dms ipc call spotlight toggle
 bind=$mainMod, V, exec, dms ipc call clipboard toggle
 bind=$mainMod SHIFT, V, exec, osc-clipview
@@ -890,7 +890,7 @@ bind=$mainMod, B, exec, dms ipc call bar toggle index 0
 bind=$mainMod SHIFT, B, exec, dms ipc call dock toggle
 bind=$mainMod CTRL, B, exec, dms ipc call bar toggleAutoHide index 0
 bind=$mainMod, Delete, exec, dms ipc call powermenu toggle
-bind=ALT, L, exec, /home/kenan/.local/bin/hypr-set lock
+bind=ALT, L, exec, ~/.local/bin/hypr-set lock
 bind=$mainMod SHIFT, Delete, exec, dms ipc call inhibit toggle
 bind=$mainMod, Y, exec, dms ipc call dankdash wallpaper
 bind=$mainMod, W, exec, dms ipc call wallpaper next
@@ -900,42 +900,42 @@ bind=$mainMod SHIFT, N, exec, dms ipc call night toggle
 bind=$mainMod ALT, Slash, exec, dms ipc call settings openWith keybinds
 bind=$mainMod, F1, exec, dms ipc call keybinds toggle hyprland
 bind=ALT, F1, exec, dms ipc call keybinds toggle hyprland
-bind=ALT, A, exec, /home/kenan/.local/bin/osc-soundctl switch
-bind=ALT CTRL, A, exec, /home/kenan/.local/bin/osc-soundctl switch-mic
+bind=ALT, A, exec, ~/.local/bin/osc-soundctl switch
+bind=ALT CTRL, A, exec, ~/.local/bin/osc-soundctl switch-mic
 bind=ALT, E, exec, osc-spotify
 bind=ALT CTRL, N, exec, osc-spotify next
 bind=ALT CTRL, B, exec, osc-spotify prev
 bind=ALT CTRL, E, exec, mpc-control toggle
-bind=ALT, I, exec, /home/kenan/.local/bin/hypr-set vlc-toggle
+bind=ALT, I, exec, ~/.local/bin/hypr-set vlc-toggle
 bind=$mainMod SHIFT, C, exec, hyprpicker -a
 bind=$mainMod CTRL, V, exec, kitty --class clipse -e clipse
-bind=, F10, exec, /home/kenan/.local/bin/bluetooth_toggle
+bind=, F10, exec, ~/.local/bin/bluetooth_toggle
 bind=ALT, F12, exec, osc-mullvad toggle
 bind=$mainMod ALT, F12, exec,osc-mullvad-slot
-bind=, Print, exec, /home/kenan/.local/bin/screenshot ri
-bind=CTRL, Print, exec, /home/kenan/.local/bin/screenshot si
-bind=ALT, Print, exec, /home/kenan/.local/bin/screenshot wi
+bind=, Print, exec, ~/.local/bin/screenshot ri
+bind=CTRL, Print, exec, ~/.local/bin/screenshot si
+bind=ALT, Print, exec, ~/.local/bin/screenshot wi
 bind=$mainMod CTRL ALT, R, exec, hyprctl reload
-bind=$mainMod CTRL ALT, S, exec, /home/kenan/.local/bin/hypr-set env-sync
-bind=$mainMod CTRL ALT, D, exec, kitty --class hypr-doctor -e bash -lc '/home/kenan/.local/bin/hypr-set doctor; echo; read -n 1 -s -r -p "Press any key to close"'
-bind=ALT, T, exec, start-kkenp
+bind=$mainMod CTRL ALT, S, exec, ~/.local/bin/hypr-set env-sync
+bind=$mainMod CTRL ALT, D, exec, kitty --class hypr-doctor -e bash -lc '~/.local/bin/hypr-set doctor; echo; read -n 1 -s -r -p "Press any key to close"'
+bind=ALT, T, exec, ~/.local/bin/start-kkenp
 bind=$mainMod ALT, Return, exec, semsumo launch --daily -all
 bind=ALT, N, exec, anotes
-bind=$mainMod SHIFT, A, exec, /home/kenan/.local/bin/hypr-set arrange-windows
+bind=$mainMod SHIFT, A, exec, ~/.local/bin/hypr-set arrange-windows
 bind=$mainMod, Return, exec, ~/.local/bin/osc-ndrop --hypr-hide-special dropdown kitty --class dropdown
 bind=Alt, Space, exec, rofi-launcher
 bind=$mainMod CTRL, Space, exec, walk
 bind=$mainMod CTRL, F, exec, env GTK_THEME=catppuccin-mocha-mauve-standard+default nemo
 bind=ALT CTRL, F, exec, kitty -e yazi
 bind=$mainMod, T, exec, kitty
-bind=$mainMod ALT, T, exec, /home/kenan/.local/bin/hypr-set smart-focus kitty
-bind=$mainMod ALT, B, exec, /home/kenan/.local/bin/hypr-set smart-focus brave
-bind=$mainMod ALT, M, exec, /home/kenan/.local/bin/hypr-set smart-focus spotify
-bind=$mainMod ALT, N, exec, /home/kenan/.local/bin/hypr-set smart-focus anotes
-bind=$mainMod ALT SHIFT, T, exec, /home/kenan/.local/bin/hypr-set pull-window kitty
-bind=$mainMod ALT SHIFT, B, exec, /home/kenan/.local/bin/hypr-set pull-window brave
-bind=$mainMod ALT SHIFT, M, exec, /home/kenan/.local/bin/hypr-set pull-window spotify
-bind=$mainMod ALT SHIFT, N, exec, /home/kenan/.local/bin/hypr-set pull-window anotes
+bind=$mainMod ALT, T, exec, ~/.local/bin/hypr-set smart-focus kitty
+bind=$mainMod ALT, B, exec, ~/.local/bin/hypr-set smart-focus brave
+bind=$mainMod ALT, M, exec, ~/.local/bin/hypr-set smart-focus spotify
+bind=$mainMod ALT, N, exec, ~/.local/bin/hypr-set smart-focus anotes
+bind=$mainMod ALT SHIFT, T, exec, ~/.local/bin/hypr-set pull-window kitty
+bind=$mainMod ALT SHIFT, B, exec, ~/.local/bin/hypr-set pull-window brave
+bind=$mainMod ALT SHIFT, M, exec, ~/.local/bin/hypr-set pull-window spotify
+bind=$mainMod ALT SHIFT, N, exec, ~/.local/bin/hypr-set pull-window anotes
 bind=$mainMod, BackSpace, movetoworkspace, special:scratchpad
 bind=ALT, BackSpace, togglespecialworkspace, scratchpad
 bind=$mainMod ALT, BackSpace, togglespecialworkspace, scratchpad
@@ -946,23 +946,23 @@ bind=$mainMod CTRL, F10, exec, mpv-manager move
 bind=$mainMod CTRL, F11, exec, mpv-manager save-yt
 bind=$mainMod CTRL, F12, exec, mpv-manager wallpaper
 bind=$mainMod CTRL, C, movetoworkspace, empty
-bind=$mainMod, Page_Up, exec, /home/kenan/.local/bin/hypr-set window-move workspace prev
-bind=$mainMod, Page_Down, exec, /home/kenan/.local/bin/hypr-set window-move workspace next
+bind=$mainMod, Page_Up, exec, ~/.local/bin/hypr-set window-move workspace prev
+bind=$mainMod, Page_Down, exec, ~/.local/bin/hypr-set window-move workspace next
 bind=$mainMod, mouse_down, workspace, e+1
 bind=$mainMod, mouse_up, workspace, e-1
 bind=$mainMod, mouse_left, layoutmsg, focus l
 bind=$mainMod, mouse_right, layoutmsg, focus r
-bind=ALT, 1, exec, /home/kenan/.local/bin/hypr-set here Kenp
-bind=ALT, 2, exec, /home/kenan/.local/bin/hypr-set here TmuxKenp
-bind=ALT, 3, exec, /home/kenan/.local/bin/hypr-set here Ai
-bind=ALT, 4, exec, /home/kenan/.local/bin/hypr-set here CompecTA
-bind=ALT, 5, exec, /home/kenan/.local/bin/hypr-set here WebCord
-bind=ALT, 6, exec, /home/kenan/.local/bin/hypr-set here org.telegram.desktop
-bind=ALT, 7, exec, /home/kenan/.local/bin/hypr-set here brave-youtube.com__-Default
-bind=ALT, 8, exec, /home/kenan/.local/bin/hypr-set here spotify
-bind=ALT, 9, exec, /home/kenan/.local/bin/hypr-set here ferdium
-bind=ALT, 0, exec, /home/kenan/.local/bin/hypr-set here all
-bind=$mainMod ALT, 0, exec, /home/kenan/.local/bin/hypr-set arrange-windows
+bind=ALT, 1, exec, ~/.local/bin/hypr-set here Kenp
+bind=ALT, 2, exec, ~/.local/bin/hypr-set here TmuxKenp
+bind=ALT, 3, exec, ~/.local/bin/hypr-set here Ai
+bind=ALT, 4, exec, ~/.local/bin/hypr-set here CompecTA
+bind=ALT, 5, exec, ~/.local/bin/hypr-set here WebCord
+bind=ALT, 6, exec, ~/.local/bin/hypr-set here org.telegram.desktop
+bind=ALT, 7, exec, ~/.local/bin/hypr-set here brave-youtube.com__-Default
+bind=ALT, 8, exec, ~/.local/bin/hypr-set here spotify
+bind=ALT, 9, exec, ~/.local/bin/hypr-set here ferdium
+bind=ALT, 0, exec, ~/.local/bin/hypr-set here all
+bind=$mainMod ALT, 0, exec, ~/.local/bin/hypr-set arrange-windows
 bind=$mainMod ALT, H, focusmonitor, l
 bind=$mainMod ALT, L, focusmonitor, r
 bind=$mainMod ALT, K, focusmonitor, u
@@ -971,15 +971,15 @@ bind=$mainMod ALT, left, focusmonitor, l
 bind=$mainMod ALT, right, focusmonitor, r
 bind=$mainMod ALT, up, focusmonitor, u
 bind=$mainMod ALT, down, focusmonitor, d
-bind=$mainMod ALT SHIFT, left, exec, /home/kenan/.local/bin/hypr-set column-move monitor left
-bind=$mainMod ALT SHIFT, right, exec, /home/kenan/.local/bin/hypr-set column-move monitor right
-bind=$mainMod ALT SHIFT, h, exec, /home/kenan/.local/bin/hypr-set column-move monitor left
-bind=$mainMod ALT SHIFT, l, exec, /home/kenan/.local/bin/hypr-set column-move monitor right
-bind=$mainMod CTRL, up, exec, /home/kenan/.local/bin/hypr-set column-move monitor up
-bind=$mainMod CTRL, down, exec, /home/kenan/.local/bin/hypr-set column-move monitor down
+bind=$mainMod ALT SHIFT, left, exec, ~/.local/bin/hypr-set column-move monitor left
+bind=$mainMod ALT SHIFT, right, exec, ~/.local/bin/hypr-set column-move monitor right
+bind=$mainMod ALT SHIFT, h, exec, ~/.local/bin/hypr-set column-move monitor left
+bind=$mainMod ALT SHIFT, l, exec, ~/.local/bin/hypr-set column-move monitor right
+bind=$mainMod CTRL, up, exec, ~/.local/bin/hypr-set column-move monitor up
+bind=$mainMod CTRL, down, exec, ~/.local/bin/hypr-set column-move monitor down
 bind=$mainMod, A, focusmonitor, +1
 bind=$mainMod, E, movecurrentworkspacetomonitor, +1
-bind=$mainMod, Escape, exec, /home/kenan/.local/bin/hypr-set workspace-move-or-focus
+bind=$mainMod, Escape, exec, ~/.local/bin/hypr-set workspace-move-or-focus
 bind=$mainMod, 1, workspace, 1
 bind=$mainMod, 2, workspace, 2
 bind=$mainMod, 3, workspace, 3
@@ -1011,10 +1011,10 @@ bindl=, XF86AudioStop, exec, dms ipc call mpris stop
 bindm=$mainMod, mouse:272, movewindow
 bindm=$mainMod, mouse:273, resizewindow
 bindm=$mainMod, mouse:274, killactive
-exec-once=/home/kenan/.local/bin/hypr-set env-sync
+exec-once=~/.local/bin/hypr-set env-sync
 exec-once=systemctl --user start hyprland-session.target
 exec-once=hyprctl setcursor catppuccin-mocha-mauve-cursors 24
-exec-once=/home/kenan/.local/bin/hypr-set clipse
+exec-once=~/.local/bin/hypr-set clipse
 
 monitor=desc:Dell Inc. DELL UP2716D KRXTR88N909L,2560x1440@59,0x0,1
 monitor=desc:Chimei Innolux Corporation 0x143F,1920x1200@60,320x1440,1
