Use absolute paths in hyprland binds

--- a/modules/hyprland/dotfiles/hypr/hyprland.conf
+++ b/modules/hyprland/dotfiles/hypr/hyprland.conf
@@ -902,16 +902,16 @@ bind=$mainMod, F1, exec, dms ipc call keybinds toggle hyprland
 bind=ALT, F1, exec, dms ipc call keybinds toggle hyprland
 bind=ALT, A, exec, ~/.local/bin/osc-soundctl switch
 bind=ALT CTRL, A, exec, ~/.local/bin/osc-soundctl switch-mic
-bind=ALT, E, exec, osc-spotify
-bind=ALT CTRL, N, exec, osc-spotify next
-bind=ALT CTRL, B, exec, osc-spotify prev
-bind=ALT CTRL, E, exec, mpc-control toggle
+bind=ALT, E, exec, ~/.local/bin/osc-spotify
+bind=ALT CTRL, N, exec, ~/.local/bin/osc-spotify next
+bind=ALT CTRL, B, exec, ~/.local/bin/osc-spotify prev
+bind=ALT CTRL, E, exec, ~/.local/bin/mpc-control toggle
 bind=ALT, I, exec, ~/.local/bin/hypr-set vlc-toggle
 bind=$mainMod SHIFT, C, exec, hyprpicker -a
 bind=$mainMod CTRL, V, exec, kitty --class clipse -e clipse
 bind=, F10, exec, ~/.local/bin/bluetooth_toggle
-bind=ALT, F12, exec, osc-mullvad toggle
-bind=$mainMod ALT, F12, exec,osc-mullvad-slot
+bind=ALT, F12, exec, ~/.local/bin/osc-mullvad toggle
+bind=$mainMod ALT, F12, exec, ~/.local/bin/osc-mullvad-slot
 bind=, Print, exec, ~/.local/bin/screenshot ri
 bind=CTRL, Print, exec, ~/.local/bin/screenshot si
 bind=ALT, Print, exec, ~/.local/bin/screenshot wi
@@ -919,12 +919,12 @@ bind=$mainMod CTRL ALT, R, exec, hyprctl reload
 bind=$mainMod CTRL ALT, S, exec, ~/.local/bin/hypr-set env-sync
 bind=$mainMod CTRL ALT, D, exec, kitty --class hypr-doctor -e bash -lc '~/.local/bin/hypr-set doctor; echo; read -n 1 -s -r -p "Press any key to close"'
 bind=ALT, T, exec, ~/.local/bin/start-kkenp
-bind=$mainMod ALT, Return, exec, semsumo launch --daily -all
+bind=$mainMod ALT, Return, exec, ~/.local/bin/semsumo launch --daily -all
 bind=ALT, N, exec, anotes
 bind=$mainMod SHIFT, A, exec, ~/.local/bin/hypr-set arrange-windows
 bind=$mainMod, Return, exec, ~/.local/bin/osc-ndrop --hypr-hide-special dropdown kitty --class dropdown
 bind=Alt, Space, exec, rofi-launcher
-bind=$mainMod CTRL, Space, exec, walk
+bind=$mainMod CTRL, Space, exec, ~/.local/bin/walk
 bind=$mainMod CTRL, F, exec, env GTK_THEME=catppuccin-mocha-mauve-standard+default nemo
 bind=ALT CTRL, F, exec, kitty -e yazi
 bind=$mainMod, T, exec, kitty
@@ -940,11 +940,11 @@ bind=$mainMod, BackSpace, movetoworkspace, special:scratchpad
 bind=ALT, BackSpace, togglespecialworkspace, scratchpad
 bind=$mainMod ALT, BackSpace, togglespecialworkspace, scratchpad
 bind=ALT, U, exec, mpv-manager playback
-bind=$mainMod CTRL, Y, exec, mpv-manager play-yt
-bind=$mainMod CTRL, F9, exec, mpv-manager stick
-bind=$mainMod CTRL, F10, exec, mpv-manager move
-bind=$mainMod CTRL, F11, exec, mpv-manager save-yt
-bind=$mainMod CTRL, F12, exec, mpv-manager wallpaper
+bind=$mainMod CTRL, Y, exec, ~/.local/bin/mpv-manager play-yt
+bind=$mainMod CTRL, F9, exec, ~/.local/bin/mpv-manager stick
+bind=$mainMod CTRL, F10, exec, ~/.local/bin/mpv-manager move
+bind=$mainMod CTRL, F11, exec, ~/.local/bin/mpv-manager save-yt
+bind=$mainMod CTRL, F12, exec, ~/.local/bin/mpv-manager wallpaper
 bind=$mainMod CTRL, C, movetoworkspace, empty
 bind=$mainMod, Page_Up, exec, ~/.local/bin/hypr-set window-move workspace prev
 bind=$mainMod, Page_Down, exec, ~/.local/bin/hypr-set window-move workspace next
