Add sectioned comments to hyprland.conf

--- a/modules/hyprland/dotfiles/hypr/hyprland.conf
+++ b/modules/hyprland/dotfiles/hypr/hyprland.conf
@@ -1,3 +1,8 @@
+# Hyprland configuration (managed by dcli)
+
+# ==========================================================
+# Environment
+# ==========================================================
 env=XDG_SESSION_TYPE,wayland
 env=XDG_SESSION_DESKTOP,Hyprland
 env=XDG_CURRENT_DESKTOP,Hyprland
@@ -38,13 +43,24 @@ env=TERM,xterm-256color
 env=BROWSER,brave
 env=CATPPUCCIN_FLAVOR,mocha
 
+# ==========================================================
+# Session bootstrap + plugins
+# ==========================================================
 exec-once = dbus-update-activation-environment --systemd DISPLAY HYPRLAND_INSTANCE_SIGNATURE WAYLAND_DISPLAY XDG_CURRENT_DESKTOP GTK_THEME XDG_ICON_THEME XCURSOR_THEME XCURSOR_SIZE QT_QPA_PLATFORMTHEME && systemctl --user stop hyprland-session.target && systemctl --user start hyprland-session.target
 exec-once=hyprctl plugin load /usr/lib/hyprland/plugins/libhyprexpo.so
 exec-once=hyprctl plugin load /usr/lib/libhyprscrolling.so
+
+# ==========================================================
+# Theme + runtime sources
+# ==========================================================
 source=~/.config/hypr/themes/mocha.conf
 source=~/.config/hypr/themes/hyprland-mauve-accent.conf
 source=~/.config/hypr/dms/outputs.conf
 source=~/.config/hypr/dms/cursor.conf
+
+# ==========================================================
+# Animations
+# ==========================================================
 animations {
   bezier=linear, 0.0, 0.0, 1.0, 1.0
   bezier=quart, 0.25, 1, 0.5, 1
@@ -62,6 +78,9 @@ animations {
   enabled=true
 }
 
+# ==========================================================
+# Bind behavior
+# ==========================================================
 binds {
   allow_workspace_cycles=true
   focus_preferred_method=0
@@ -71,11 +90,17 @@ binds {
   workspace_center_on=1
 }
 
+# ==========================================================
+# Cursor
+# ==========================================================
 cursor {
   enable_hyprcursor=true
   no_hardware_cursors=1
 }
 
+# ==========================================================
+# Decorations (blur, shadows, opacity)
+# ==========================================================
 decoration {
   blur {
     enabled=true
@@ -108,6 +133,9 @@ decoration {
   rounding=10
 }
 
+# ==========================================================
+# Layout: dwindle
+# ==========================================================
 dwindle {
   default_split_ratio=1.000000
   force_split=2
@@ -118,6 +146,9 @@ dwindle {
   use_active_for_splits=true
 }
 
+# ==========================================================
+# General compositor behavior
+# ==========================================================
 general {
   $mainMod=SUPER
   allow_tearing=false
@@ -133,6 +164,9 @@ general {
 }
 
 
+# ==========================================================
+# Gestures
+# ==========================================================
 gestures {
   workspace_swipe_cancel_ratio=0.300000
   workspace_swipe_create_new=true
@@ -146,6 +180,9 @@ gestures {
   workspace_swipe_touch_invert=false
 }
 
+# ==========================================================
+# Grouping / tabbed layouts
+# ==========================================================
 group {
   groupbar {
     col.active=0xed89b4fa
@@ -162,6 +199,9 @@ group {
   col.border_locked_inactive=0xa845475a 0xa86c7086 45deg
 }
 
+# ==========================================================
+# Input devices
+# ==========================================================
 input {
   touchpad {
     clickfinger_behavior=true
@@ -188,6 +228,9 @@ input {
   sensitivity=1.000000
 }
 
+# ==========================================================
+# Layout: master
+# ==========================================================
 master {
   allow_small_split=false
   drop_at_cursor=false
@@ -200,6 +243,9 @@ master {
   special_scale_factor=0.800000
 }
 
+# ==========================================================
+# Misc compositor knobs
+# ==========================================================
 misc {
   allow_session_lock_restore=true
   always_follow_on_dnd=true
@@ -225,6 +271,9 @@ misc {
   vrr=1
 }
 
+# ==========================================================
+# Plugins
+# ==========================================================
 plugin {
   hyprexpo {
     columns=3
@@ -241,6 +290,9 @@ plugin {
   }
 }
 
+# ==========================================================
+# Window rules
+# ==========================================================
 windowrule {
   name=suppress-maximize-events
   match:class=.*
@@ -827,6 +879,10 @@ windowrule {
   match:class=^(Kenp)$
   opacity=1.0 override 1.0 override
 }
+
+# ==========================================================
+# Key bindings
+# ==========================================================
 bind=$mainMod, left, layoutmsg, focus l
 bind=$mainMod, right, layoutmsg, focus r
 bind=$mainMod, up, workspace, e-1
@@ -1011,11 +1067,18 @@ bindl=, XF86AudioStop, exec, dms ipc call mpris stop
 bindm=$mainMod, mouse:272, movewindow
 bindm=$mainMod, mouse:273, resizewindow
 bindm=$mainMod, mouse:274, killactive
+
+# ==========================================================
+# Startup helpers
+# ==========================================================
 exec-once=~/.local/bin/hypr-set env-sync
 exec-once=systemctl --user start hyprland-session.target
 exec-once=hyprctl setcursor catppuccin-mocha-mauve-cursors 24
 exec-once=~/.local/bin/hypr-set clipse
 
+# ==========================================================
+# Monitors + workspaces
+# ==========================================================
 monitor=desc:Dell Inc. DELL UP2716D KRXTR88N909L,2560x1440@59,0x0,1
 monitor=desc:Chimei Innolux Corporation 0x143F,1920x1200@60,320x1440,1
 monitor=,preferred,auto,1
@@ -1033,6 +1096,10 @@ workspace=f[1], gapsout:0, gapsin:0, rounding:0, shadow:0
 workspace=w[v2-99]s[false], bordersize:3, rounding:true
 workspace=special:dropdown, gapsout:0, gapsin:0, bordersize:0, rounding:0, shadow:0
 workspace=special:scratchpad, gapsout:0, gapsin:0, bordersize:0, rounding:0, shadow:0
+
+# ==========================================================
+# Resize submap
+# ==========================================================
 bind = $mainMod CTRL, R, submap, resize
 submap = resize
 binde = , right, resizeactive, 10 0
