Group hyprland key bindings with headings

--- a/modules/hyprland/dotfiles/hypr/hyprland.conf
+++ b/modules/hyprland/dotfiles/hypr/hyprland.conf
@@ -883,6 +883,7 @@ windowrule {
 # ==========================================================
 # Key bindings
 # ==========================================================
+# -- Core focus & navigation
 bind=$mainMod, left, layoutmsg, focus l
 bind=$mainMod, right, layoutmsg, focus r
 bind=$mainMod, up, workspace, e-1
@@ -901,10 +902,14 @@ bind=$mainMod SHIFT, h, layoutmsg, swapcol l
 bind=$mainMod SHIFT, l, layoutmsg, swapcol r
 bind=$mainMod SHIFT, k, layoutmsg, movewindowto u
 bind=$mainMod SHIFT, j, layoutmsg, movewindowto d
+
+# -- Window actions
 bind=$mainMod, Q, killactive
 bind=$mainMod, F, fullscreen, 0
 bind=$mainMod, M, exec, ~/.local/bin/hypr-set maximize-column
 bind=$mainMod, C, layoutmsg, togglefit
+
+# -- Column sizing & layout tweaks
 bind=$mainMod, R, layoutmsg, colresize +conf
 bind=$mainMod SHIFT, R, layoutmsg, colresize 0.8
 bind=$mainMod, 0, layoutmsg, colresize 0.5
@@ -914,6 +919,8 @@ bind=$mainMod, minus, layoutmsg, colresize -0.05
 bind=$mainMod, equal, layoutmsg, colresize +0.05
 bind=$mainMod SHIFT, minus, resizeactive, 0 -50
 bind=$mainMod SHIFT, equal, resizeactive, 0 50
+
+# -- Float / group / zen / pin / opacity
 bind=ALT, G, exec, ~/.local/bin/hypr-set maximize-window-to-edges
 bind=$mainMod CTRL, W, togglegroup
 bind=$mainMod, G, exec, ~/.local/bin/hypr-set toggle-float
@@ -928,6 +935,8 @@ bind=$mainMod CTRL, l, exec, ~/.local/bin/hypr-set consume-or-expel right
 bind=$mainMod, O, exec, ~/.local/bin/hypr-set opacity toggle
 bind=$mainMod SHIFT, mouse_down, exec, ~/.local/bin/hypr-set opacity -0.1
 bind=$mainMod SHIFT, mouse_up, exec, ~/.local/bin/hypr-set opacity +0.1
+
+# -- DMS launchers
 bind=$mainMod, Space, exec, dms ipc call spotlight toggle
 bind=$mainMod, V, exec, dms ipc call clipboard toggle
 bind=$mainMod SHIFT, V, exec, osc-clipview
@@ -939,6 +948,8 @@ bind=$mainMod SHIFT, P, exec, dms ipc call processlist focusOrToggle
 bind=$mainMod, N, exec, dms ipc call notifications toggle
 bind=$mainMod CTRL, N, exec, dms ipc call notepad open
 bind=$mainMod, comma, exec, dms ipc call settings focusOrToggle
+
+# -- DMS UI + session
 bind=$mainMod, Tab, focuscurrentorlast
 bind=$mainMod SHIFT, Tab, focuscurrentorlast
 bind=ALT, Tab, exec, dms ipc call spotlight openQuery '!'
@@ -956,6 +967,8 @@ bind=$mainMod SHIFT, N, exec, dms ipc call night toggle
 bind=$mainMod ALT, Slash, exec, dms ipc call settings openWith keybinds
 bind=$mainMod, F1, exec, dms ipc call keybinds toggle hyprland
 bind=ALT, F1, exec, dms ipc call keybinds toggle hyprland
+
+# -- Media + system controls
 bind=ALT, A, exec, ~/.local/bin/osc-soundctl switch
 bind=ALT CTRL, A, exec, ~/.local/bin/osc-soundctl switch-mic
 bind=ALT, E, exec, ~/.local/bin/osc-spotify
@@ -968,12 +981,16 @@ bind=$mainMod CTRL, V, exec, kitty --class clipse -e clipse
 bind=, F10, exec, ~/.local/bin/bluetooth_toggle
 bind=ALT, F12, exec, ~/.local/bin/osc-mullvad toggle
 bind=$mainMod ALT, F12, exec, ~/.local/bin/osc-mullvad-slot
+
+# -- Screenshots + reload
 bind=, Print, exec, ~/.local/bin/screenshot ri
 bind=CTRL, Print, exec, ~/.local/bin/screenshot si
 bind=ALT, Print, exec, ~/.local/bin/screenshot wi
 bind=$mainMod CTRL ALT, R, exec, hyprctl reload
 bind=$mainMod CTRL ALT, S, exec, ~/.local/bin/hypr-set env-sync
 bind=$mainMod CTRL ALT, D, exec, kitty --class hypr-doctor -e bash -lc '~/.local/bin/hypr-set doctor; echo; read -n 1 -s -r -p "Press any key to close"'
+
+# -- App launchers
 bind=ALT, T, exec, ~/.local/bin/start-kkenp
 bind=$mainMod ALT, Return, exec, ~/.local/bin/semsumo launch --daily -all
 bind=ALT, N, exec, anotes
@@ -984,6 +1001,8 @@ bind=$mainMod CTRL, Space, exec, ~/.local/bin/walk
 bind=$mainMod CTRL, F, exec, env GTK_THEME=catppuccin-mocha-mauve-standard+default nemo
 bind=ALT CTRL, F, exec, kitty -e yazi
 bind=$mainMod, T, exec, kitty
+
+# -- Smart focus / pull
 bind=$mainMod ALT, T, exec, ~/.local/bin/hypr-set smart-focus kitty
 bind=$mainMod ALT, B, exec, ~/.local/bin/hypr-set smart-focus brave
 bind=$mainMod ALT, M, exec, ~/.local/bin/hypr-set smart-focus spotify
@@ -992,15 +1011,21 @@ bind=$mainMod ALT SHIFT, T, exec, ~/.local/bin/hypr-set pull-window kitty
 bind=$mainMod ALT SHIFT, B, exec, ~/.local/bin/hypr-set pull-window brave
 bind=$mainMod ALT SHIFT, M, exec, ~/.local/bin/hypr-set pull-window spotify
 bind=$mainMod ALT SHIFT, N, exec, ~/.local/bin/hypr-set pull-window anotes
+
+# -- Scratchpad
 bind=$mainMod, BackSpace, movetoworkspace, special:scratchpad
 bind=ALT, BackSpace, togglespecialworkspace, scratchpad
 bind=$mainMod ALT, BackSpace, togglespecialworkspace, scratchpad
+
+# -- MPV manager
 bind=ALT, U, exec, mpv-manager playback
 bind=$mainMod CTRL, Y, exec, ~/.local/bin/mpv-manager play-yt
 bind=$mainMod CTRL, F9, exec, ~/.local/bin/mpv-manager stick
 bind=$mainMod CTRL, F10, exec, ~/.local/bin/mpv-manager move
 bind=$mainMod CTRL, F11, exec, ~/.local/bin/mpv-manager save-yt
 bind=$mainMod CTRL, F12, exec, ~/.local/bin/mpv-manager wallpaper
+
+# -- Workspace flow + here-to-window
 bind=$mainMod CTRL, C, movetoworkspace, empty
 bind=$mainMod, Page_Up, exec, ~/.local/bin/hypr-set window-move workspace prev
 bind=$mainMod, Page_Down, exec, ~/.local/bin/hypr-set window-move workspace next
@@ -1019,6 +1044,8 @@ bind=ALT, 8, exec, ~/.local/bin/hypr-set here spotify
 bind=ALT, 9, exec, ~/.local/bin/hypr-set here ferdium
 bind=ALT, 0, exec, ~/.local/bin/hypr-set here all
 bind=$mainMod ALT, 0, exec, ~/.local/bin/hypr-set arrange-windows
+
+# -- Monitor focus + move
 bind=$mainMod ALT, H, focusmonitor, l
 bind=$mainMod ALT, L, focusmonitor, r
 bind=$mainMod ALT, K, focusmonitor, u
