Add gnome-monitor-config package

--- a/modules/base/packages.yaml
+++ b/modules/base/packages.yaml
@@ -107,6 +107,7 @@ packages:
   - brightnessctl
   - extra/tigervnc
   - remmina
+  - gnome-monitor-config
 
   # Documents (moved evince, zathura)
   - poppler
