--- a/modules/base/packages.yaml
+++ b/modules/base/packages.yaml
@@ -107,7 +107,7 @@ packages:
   - brightnessctl
   - extra/tigervnc
   - remmina
-  - gnome-monitor-config
+  - gnome-monitor-config-git
 
   # Documents (moved evince, zathura)
   - poppler
